--- a/README
+++ b/README
@@ -1,5 +1,8 @@
 Based on Remote Transmission Plus
 
+v0.9.9.5
+* Fix showing of directories in download popups.
+
 v0.9.9.3
 * Bugs fixed. Patches merged.
 + Add browser notification when adding torrents (disabled by default)
